docs(update): update the whole README and configure as per the latest changes in the project